--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PORT=3002
 JWT_SECRET=adasdad
-DATABASE_URL=postgres://postgres:password@localhost:5432/nitrogen_tank_manager
+DATABASE_URL=postgres://postgres:password@localhost:5432/test
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_DATABASE=test
+DB_CONTAINER_NAME=
