--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 PORT=3002
-JWT_SECRET=adasdad
+JWT_SECRET=some_secret
 DATABASE_URL=postgres://postgres:password@localhost:5432/test
 DB_USERNAME=postgres
 DB_PASSWORD=password
 DB_DATABASE=test
-DB_CONTAINER_NAME=
