--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,6 @@ services:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
-    container_name: AdministradorDeLlavesDB
+    container_name: db-container
     volumes:
       - ./postgres:/var/lib/postgresql/data
